force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Sponsor__c/ucinn_ascendv2__Matching_Challenge_Sponsor__c.object-meta.xml
<CustomObject>
    <description>Donors who defined the challenge</description>
    <label>Matching Challenge Sponsor</label>
    <nameField>
        <displayFormat>MCS-{0000000}</displayFormat>
        <label>Matching Challenge Sponsor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Challenge Sponsors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>