force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Sponsor__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Donor who defined this challenge.</description>
    <inlineHelpText>Donor who defined this challenge.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matching Challenge Sponsors</relationshipLabel>
    <relationshipName>Matching_Challenge_Sponsors_Account</relationshipName>
    <type>Lookup</type>
</CustomField>