force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Sponsor__c/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Designation to create the pledges Designation detail with.</description>
    <inlineHelpText>Designation to create the pledges Designation detail with.</inlineHelpText>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Matching Challenge Sponsors</relationshipLabel>
    <relationshipName>Matching_Challenge_Sponsors_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>