force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Sponsor__c/fields/ucinn_ascendv2__Match_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Match_Amount__c</fullName>
    <description>Amount to Create the Sponsor Pledge with.</description>
    <inlineHelpText>Amount to Create the Sponsor Pledge with.</inlineHelpText>
    <label>Match Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>