force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Sponsor__c/fields/ucinn_ascendv2__Matching_Challenge__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Challenge__c</fullName>
    <description>Challenge Object that this sponsor described.</description>
    <inlineHelpText>Challenge Object that this sponsor described.</inlineHelpText>
    <label>Matching Challenge</label>
    <referenceTo>ucinn_ascendv2__Matching_Challenge__c</referenceTo>
    <relationshipLabel>Matching Challenge Sponsors</relationshipLabel>
    <relationshipName>Matching_Chal_Sponsor_Matching_Challenge</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>