force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Sponsor__c/fields/ucinn_ascendv2__Matching_Challenge_Campaign_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Challenge_Campaign_Formula__c</fullName>
    <description>Matching Challenge Campaign Field</description>
    <formula>ucinn_ascendv2__Matching_Challenge__r.ucinn_ascendv2__Campaign__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Matching Challenge Campaign Field</inlineHelpText>
    <label>Matching Challenge Campaign</label>
    <type>Text</type>
</CustomField>