force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Sponsor__c/fields/ucinn_ascendv2__Matching_Challenge_Designation_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Challenge_Designation_Formula__c</fullName>
    <description>Matching Challenge Designation</description>
    <formula>ucinn_ascendv2__Matching_Challenge__r.ucinn_ascendv2__Designation__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Matching Challenge Designation</inlineHelpText>
    <label>Matching Challenge Designation</label>
    <type>Text</type>
</CustomField>