force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Sponsor__c/fields/ucinn_ascendv2__Matching_Challenge_Session_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Challenge_Session_Formula__c</fullName>
    <description>Matching Challenge Session Field</description>
    <formula>ucinn_ascendv2__Matching_Challenge__r.ucinn_ascendv2__Session__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Matching Challenge Session Field</inlineHelpText>
    <label>Matching Challenge Session</label>
    <type>Text</type>
</CustomField>