force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Sponsor__c/validationRules/ucinn_ascendv2__Account_Or_Contact_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Account_Or_Contact_Missing</fullName>
    <active>true</active>
    <description>Sponsor has to have either Account or Contact</description>
    <errorConditionFormula>IF(AND(ucinn_ascendv2__Contact__c = null, ucinn_ascendv2__Account__c = null), true, false)</errorConditionFormula>
    <errorMessage>Sponsor has to have either Account or Contact</errorMessage>
</ValidationRule>