force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Sponsor__c/validationRules/ucinn_ascendv2__Cannot_Have_Both_Contact_And_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Cannot_Have_Both_Contact_And_Account</fullName>
    <active>true</active>
    <description>Cannot have both contact and account filled out</description>
    <errorConditionFormula>IF(AND(ucinn_ascendv2__Contact__c != null, ucinn_ascendv2__Account__c != null), true, false)</errorConditionFormula>
    <errorMessage>Cannot have both contact and account filled out</errorMessage>
</ValidationRule>